--- a/Abbohubb/templates/index.html
+++ b/Abbohubb/templates/index.html
@@ -32,8 +32,10 @@
   <!-- Styles -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
-  <!-- vendor scripts Google Tag Manager -->
+  <!-- vendor scripts Google Tag Manager & adsense -->
   <script src="{{ url_for('static', filename='js/vendor.js') }}"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5139039913201131"
+     crossorigin="anonymous"></script>
 
   <!-- Structured data (organisatie) -->
 <!-- Structured data (organisatie) -->
