--- a/Abbohubb/templates/vergelijk.html
+++ b/Abbohubb/templates/vergelijk.html
@@ -20,9 +20,11 @@
       <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/vergelijk.css') }}">
   <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">    
 </head>
-<!-- Google Tag Manager (noscript) -->
+<!-- Google Tag Manager & adsense(noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRGH8P6W"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5139039913201131"
+     crossorigin="anonymous"></script>
   <!-- End Google Tag Manager (noscript) -->
 <body>
   <!-- Header met de abonnementsnaam -->
