--- a/Abbohubb/templates/abonnement_reviews.html
+++ b/Abbohubb/templates/abonnement_reviews.html
@@ -44,9 +44,11 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/abonnement-reviews.css') }}">
 
 </head>
-<!-- Google Tag Manager (noscript) -->
+<!-- Google Tag Manager & adsense (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRGH8P6W"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5139039913201131"
+     crossorigin="anonymous"></script>
   <!-- End Google Tag Manager (noscript) -->
 <body>
   <!-- Header met de abonnementsnaam -->
