--- a/Abbohubb/templates/admin_dashboard.html
+++ b/Abbohubb/templates/admin_dashboard.html
@@ -334,6 +334,9 @@
             <a href="{{ url_for('view_logs') }}" class="btn">Bekijk Logs</a>
             <a href="{{ url_for('berichten') }}" class="btn">Bekijk berichten</a>
             <a href="{{ url_for('admin_train_chatbot') }}" class="btn">Chatbot trainen</a>
+            <a href="{{ url_for('admin_clicks') }}" class="btn">Klikrapport</a>
+            <a href="{{ url_for('blog_toevoegen') }}" class="btn">Nieuw blogbericht</a>
+            <a href="{{ url_for('admin_blog_overzicht') }}" class="btn">Beheer Blogs</a>
         </p>
         <section class="dashboard-taken" id="abbohub-planning">
   <h2>📅 Groei- & Inkomstenplanning (6 maanden)</h2>
