--- a/Abbohubb/templates/blog_detail.html
+++ b/Abbohubb/templates/blog_detail.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+<!-- Google Tag Manager & adsense (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRGH8P6W"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5139039913201131"
+     crossorigin="anonymous"></script>
+  <!-- End Google Tag Manager (noscript) -->
   <meta charset="UTF-8">
   <title>{{ post.titel }} - Blog | AbboHub</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
